--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>List Makanan Favorit</h1>
+    <h1>List lagu favorit</h1>
     <ul>
-        <li>seblak</li>
-        <li>eskrim</li>
-        <li>nasi goreng</li>
-        <li>kebab</li>
+        <li>bernadya</li>
+        <li>bruno mars</li>
+
     </ul>
 </body>
 </html>
